--- a/sentiment_analysis_restaurants.ipynb
+++ b/sentiment_analysis_restaurants.ipynb
@@ -4864,6 +4864,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we find the top 5 restaurants with most bad comments on average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neg</th>\n",
+       "      <th>neu</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>r_neg</th>\n",
+       "      <th>r_neu</th>\n",
+       "      <th>r_pos</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>business_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Popeyes</th>\n",
+       "      <td>0.171545</td>\n",
+       "      <td>0.627182</td>\n",
+       "      <td>0.201273</td>\n",
+       "      <td>0.530813</td>\n",
+       "      <td>0.188057</td>\n",
+       "      <td>0.281130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mcdonalds Fethiye</th>\n",
+       "      <td>0.122818</td>\n",
+       "      <td>0.742818</td>\n",
+       "      <td>0.134364</td>\n",
+       "      <td>0.488074</td>\n",
+       "      <td>0.148260</td>\n",
+       "      <td>0.363666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Diyarbakir Ocakbasi Palace</th>\n",
+       "      <td>0.082909</td>\n",
+       "      <td>0.713727</td>\n",
+       "      <td>0.203455</td>\n",
+       "      <td>0.463427</td>\n",
+       "      <td>0.099198</td>\n",
+       "      <td>0.437375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tavuk Dunyasi</th>\n",
+       "      <td>0.098000</td>\n",
+       "      <td>0.628091</td>\n",
+       "      <td>0.273909</td>\n",
+       "      <td>0.433831</td>\n",
+       "      <td>0.188421</td>\n",
+       "      <td>0.377748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mado</th>\n",
+       "      <td>0.066909</td>\n",
+       "      <td>0.772091</td>\n",
+       "      <td>0.160909</td>\n",
+       "      <td>0.424217</td>\n",
+       "      <td>0.166357</td>\n",
+       "      <td>0.409426</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 neg       neu       pos     r_neg     r_neu  \\\n",
+       "business_name                                                                  \n",
+       "Popeyes                     0.171545  0.627182  0.201273  0.530813  0.188057   \n",
+       "Mcdonalds Fethiye           0.122818  0.742818  0.134364  0.488074  0.148260   \n",
+       "Diyarbakir Ocakbasi Palace  0.082909  0.713727  0.203455  0.463427  0.099198   \n",
+       "Tavuk Dunyasi               0.098000  0.628091  0.273909  0.433831  0.188421   \n",
+       "Mado                        0.066909  0.772091  0.160909  0.424217  0.166357   \n",
+       "\n",
+       "                               r_pos  \n",
+       "business_name                         \n",
+       "Popeyes                     0.281130  \n",
+       "Mcdonalds Fethiye           0.363666  \n",
+       "Diyarbakir Ocakbasi Palace  0.437375  \n",
+       "Tavuk Dunyasi               0.377748  \n",
+       "Mado                        0.409426  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped = V.groupby(\"business_name\")[[\"neg\", \"neu\", \"pos\", \"r_neg\", \"r_neu\", \"r_pos\"]].mean()\n",
+    "\n",
+    "grouped = grouped.sort_values(by=\"r_neg\", ascending=False)\n",
+    "\n",
+    "grouped.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
