--- a/sentiment_analysis_restaurants.ipynb
+++ b/sentiment_analysis_restaurants.ipynb
@@ -4872,7 +4872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4902,9 +4902,11 @@
        "      <th>r_neg</th>\n",
        "      <th>r_neu</th>\n",
        "      <th>r_pos</th>\n",
+       "      <th>rating</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>business_name</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -4922,6 +4924,7 @@
        "      <td>0.530813</td>\n",
        "      <td>0.188057</td>\n",
        "      <td>0.281130</td>\n",
+       "      <td>3.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mcdonalds Fethiye</th>\n",
@@ -4931,6 +4934,7 @@
        "      <td>0.488074</td>\n",
        "      <td>0.148260</td>\n",
        "      <td>0.363666</td>\n",
+       "      <td>3.363636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Diyarbakir Ocakbasi Palace</th>\n",
@@ -4940,6 +4944,7 @@
        "      <td>0.463427</td>\n",
        "      <td>0.099198</td>\n",
        "      <td>0.437375</td>\n",
+       "      <td>3.272727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tavuk Dunyasi</th>\n",
@@ -4949,6 +4954,7 @@
        "      <td>0.433831</td>\n",
        "      <td>0.188421</td>\n",
        "      <td>0.377748</td>\n",
+       "      <td>3.272727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mado</th>\n",
@@ -4958,6 +4964,7 @@
        "      <td>0.424217</td>\n",
        "      <td>0.166357</td>\n",
        "      <td>0.409426</td>\n",
+       "      <td>3.181818</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4972,22 +4979,22 @@
        "Tavuk Dunyasi               0.098000  0.628091  0.273909  0.433831  0.188421   \n",
        "Mado                        0.066909  0.772091  0.160909  0.424217  0.166357   \n",
        "\n",
-       "                               r_pos  \n",
-       "business_name                         \n",
-       "Popeyes                     0.281130  \n",
-       "Mcdonalds Fethiye           0.363666  \n",
-       "Diyarbakir Ocakbasi Palace  0.437375  \n",
-       "Tavuk Dunyasi               0.377748  \n",
-       "Mado                        0.409426  "
+       "                               r_pos    rating  \n",
+       "business_name                                   \n",
+       "Popeyes                     0.281130  3.000000  \n",
+       "Mcdonalds Fethiye           0.363666  3.363636  \n",
+       "Diyarbakir Ocakbasi Palace  0.437375  3.272727  \n",
+       "Tavuk Dunyasi               0.377748  3.272727  \n",
+       "Mado                        0.409426  3.181818  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped = V.groupby(\"business_name\")[[\"neg\", \"neu\", \"pos\", \"r_neg\", \"r_neu\", \"r_pos\"]].mean()\n",
+    "grouped = V.groupby(\"business_name\")[[\"neg\", \"neu\", \"pos\", \"r_neg\", \"r_neu\", \"r_pos\",\"rating\"]].mean()\n",
     "\n",
     "grouped = grouped.sort_values(by=\"r_neg\", ascending=False)\n",
     "\n",
